--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1"
   }
 }
